--- a/crates/cli/Cargo.toml
+++ b/crates/cli/Cargo.toml
@@ -6,3 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.0.18", features = ["derive"] }
+colored = "2.0.0"
+compiler = { path = "../compiler" }
