--- a/crates/compiler/Cargo.toml
+++ b/crates/compiler/Cargo.toml
@@ -12,3 +12,5 @@ bytes = "1.4.0"
 ethereum-types = "0.14.1"
 ethabi = "18.0.0"
 eth-encode-packed = "0.1.0"
+codemap-diagnostic = "0.1.1"
+codemap = "0.1.3"
